--- a/src/app/shared/info-banner/info-banner.component.scss
+++ b/src/app/shared/info-banner/info-banner.component.scss
@@ -26,6 +26,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    mat-icon{
+        color: white;
+    }
+    
     p{
         margin-top: auto;
         margin-bottom: auto;
