--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -3,7 +3,7 @@
         <app-search-bar-for-devspace></app-search-bar-for-devspace>
         <div class="titleRow">
             <div class="titleAndServerSvg">
-                <img src="/img/devspace/titleAndServerSvg.svg">
+                <img src="./img/devspace/titleAndServerSvg.svg">
                 <h2>Devspace</h2>
             </div>
             <button class="writeMessageButton" mat-icon-button (click)="openWriteAMessage()">
