--- a/src/app/shared/header/main-header.component.html
+++ b/src/app/shared/header/main-header.component.html
@@ -8,7 +8,7 @@
                 <button class="backToSideNavButton">
                     <mat-icon>chevron_left</mat-icon>
                 </button>
-                <img src="/img/devspace/titleAndServerSvg.svg">
+                <img src="./img/devspace/titleAndServerSvg.svg">
                 <span>Devspace</span>
             </div>
             <app-searchbar class="nonMobilSearchbar" icon="search" [placeholder]="this.placeholder" [align_reverse]='true'></app-searchbar>
