--- a/src/app/dialog/show-members-of-channel/show-members-of-channel.component.html
+++ b/src/app/dialog/show-members-of-channel/show-members-of-channel.component.html
@@ -14,7 +14,7 @@
             <div class="contact" (click)="this.dialogRef.close(); memberService.openProfileUser(member.id)" *ngFor="let member of (filteredMembers$ | async)">
               <div class="contactPictureContainer">
                 <img class="contactPicture" [src]="member.imageUrl" alt="User picture">
-                <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="User status">
+                <img class="onlineStatus" [src]="member.status ? './img/profile-pic/online.svg' : './img/profile-pic/offline.svg'" alt="User status">
               </div>
               <span>{{ member.name }}</span>
             </div>
