--- a/src/app/main-content/message/message-options/message-options.component.html
+++ b/src/app/main-content/message/message-options/message-options.component.html
@@ -2,8 +2,8 @@
   'option-menu': !messageService.checkUser(message), 
   'thread-active': isThread,
 }">
-  <div class="option-btn-container" (click)="reactionMessage('rocket')"><img src="/img/reactions/rocket.svg" alt=""></div>
-  <div class="option-btn-container" (click)="reactionMessage('like')"><img src="/img/reactions/like.svg" alt=""></div>
+  <div class="option-btn-container" (click)="reactionMessage('rocket')"><img src="./img/reactions/rocket.svg" alt=""></div>
+  <div class="option-btn-container" (click)="reactionMessage('like')"><img src="./img/reactions/like.svg" alt=""></div>
   <div class="option-btn-container" (click)="toggleEmojis($event)"><mat-icon class="icon">sentiment_satisfied</mat-icon></div>
   <div class="option-btn-container" *ngIf="directMessage.isDirectMessage == false" (click)="openThread()"><mat-icon class="icon">comment</mat-icon></div>
   <div class="option-btn-container" *ngIf="messageService.checkUser(message)" (click)="openEditMenu()"><mat-icon class="icon">more_vert</mat-icon></div>
@@ -15,6 +15,5 @@
 
   <div class="emojis-container" *ngIf="openEmojis"  [ngClass]="messageService.checkUser(message) ? 'emojis-container' : 'emojis-container-member'">>
       <emoji-mart [style] =" { width: 100 } " title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
-
   </div>
 </div>
