--- a/src/app/main-content/login/sign-up/sign-up.component.scss
+++ b/src/app/main-content/login/sign-up/sign-up.component.scss
@@ -145,33 +145,7 @@ a{
 }
 
 .step-back-button{
-    height: clamp(18px, 4vw, 24px);
-    width: clamp(18px, 4vw, 24px);
-    @include materialSymbols;
-    font-size: 24px;
-    color: var(--text-black);
-    text-align: center;
-    @include dFlex;
-    border-radius: 50%;
-    padding: 13px 13px;
-    border: 1px solid transparent;
-    position: absolute;
-    top: calc((100% - 26px - 24px) / 2);
-    left: 0px;
-
-    mat-icon{
-        font-size: clamp(18px, 4vw, 24px);
-    }
-
-    &:hover{
-        color: var(--text-blue);
-        border-color: var( --purple-3);
-        cursor: pointer;
-    }
-
-    @include respond-to-maxWidth(smallMedium) {
-        top: 4px;
-     }
+    @include  step-back-button;
 }
 
 .flowBox{
