--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
@@ -169,32 +169,5 @@ a{
 }
 
 .step-back-button{
-    height: clamp(18px, 4vw, 24px);
-    width: clamp(18px, 4vw, 24px);
-    @include materialSymbols;
-    font-size: 24px;
-    color: var(--text-black);
-    text-align: center;
-    @include dFlex;
-    border-radius: 50%;
-    padding: 13px 13px;
-    border: 1px solid transparent;
-    position: absolute;
-    top: calc((100% - 26px - 24px) / 2);
-    left: 0px;
-    mat-icon{
-        font-size: clamp(18px, 4vw, 24px);
-    }
-    &:hover{
-        color: var(--text-blue);
-        border-color: var( --purple-3);
-        cursor: pointer;
-    }
-}
-
-.active{
-    img{
-        border-radius: 50%;
-        border: 3px solid var(--green) !important;
-    }
+      @include  step-back-button;
 }
