--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -1,3 +1,5 @@
+
+
 @if(lightbox.lightboxIsOpen){<app-lightbox></app-lightbox>}
 <app-headmenu-login></app-headmenu-login>
 @if(auth.enableAnimation){<app-login-animation></app-login-animation>}
@@ -13,7 +15,7 @@
 <section class="MainWrapper">
 
     <div class='whiteBox'> 
-
+        <scrolling-indicator></scrolling-indicator>
         <app-sign-in [ngClass]='setNavigationAnimationClass(0)'></app-sign-in>
         <app-sign-up [ngClass]='setNavigationAnimationClass(1)'></app-sign-up>
         <app-choose-avatar [ngClass]='setNavigationAnimationClass(2)' ></app-choose-avatar>
