add logic for enabling ' content is ebale to scroll animation'

--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.html
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.html
@@ -1,6 +1,6 @@
 <div class="content-inside-wrapper">
     <div class="flow">
-        <div (click)="navigation.navToPage(1)" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
+        <div (click)="navigation.navToPage(1); navigation.checkScrollStatus()" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
         <h1>Choose Your Avatar</h1>
     </div>
 
