--- a/src/app/main-content/login/headmenu-login/headmenu-login.component.html
+++ b/src/app/main-content/login/headmenu-login/headmenu-login.component.html
@@ -3,7 +3,7 @@
         <nav>
             <ul>
                 <li>New at DABubble?</li>
-                <li><a (click)="navigation.navToPage(1)">Create Account</a></li>
+                <li><a (click)="navigation.navToPage(1); navigation.checkScrollStatus()">Create Account</a></li>
             </ul>
         </nav>
     </div>
