--- a/src/app/main-content/login/lost-password/lost-password.component.html
+++ b/src/app/main-content/login/lost-password/lost-password.component.html
@@ -1,7 +1,7 @@
 <div class="content-inside-wrapper">
     
     <div class="flow">
-        <div (click)="navigation.navToPage(0)" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
+        <div (click)="navigation.navToPage(0); navigation.checkScrollStatus()" class="step-back-button"><mat-icon>arrow_back</mat-icon></div>
         <h1>Reset Your<br>Password</h1>
     </div>
 
@@ -13,7 +13,7 @@
         <p class="description">Afterwards we will send you a E-Mail to reset your current Password.</p>
 
         <div class="button-collection">
-            <button [disabled]="!myFormLostPassword.valid" (click)="sendResetMail()" >Send E-mail</button>
+            <button [disabled]="!myFormLostPassword.valid" (click)="sendResetMail();  navigation.checkScrollStatus()" >Send E-mail</button>
         </div>
     </div>
 </div>
