--- a/src/app/shared/indicator-for-scrolling/indicator-for-scrolling.component.html
+++ b/src/app/shared/indicator-for-scrolling/indicator-for-scrolling.component.html
@@ -1,6 +1,7 @@
-<div class="indicator-wrapper">
-    <div class="arrow-content">
-        <span class="arrow-body"></span>
-        <span class="arrow-head"></span>
+
+    <div [ngClass]="{'indicator-wrapper' : navigation.isScrollable}">
+        <div [ngClass]="{'arrow-content' : navigation.isScrollable}">
+            <span [ngClass]="{'arrow-body' : navigation.isScrollable}"></span>
+            <span [ngClass]="{'arrow-head' : navigation.isScrollable}"></span>
+        </div>
     </div>
-</div>
