--- a/src/app/main-content/login/login.component.html
+++ b/src/app/main-content/login/login.component.html
@@ -15,7 +15,7 @@
 <section class="MainWrapper">
 
     <div class='whiteBox' id="whiteBox"> 
-        <scrolling-indicator></scrolling-indicator>
+        @if(!auth.enableAnimation){<scrolling-indicator></scrolling-indicator>}
         <app-sign-in [ngClass]='setNavigationAnimationClass(0)'></app-sign-in>
         <app-sign-up [ngClass]='setNavigationAnimationClass(1)'></app-sign-up>
         <app-choose-avatar [ngClass]='setNavigationAnimationClass(2)' ></app-choose-avatar>
