--- a/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
+++ b/src/app/dialog/create-channel/choose-members-create-channel/choose-members-create-channel.component.scss
@@ -27,6 +27,7 @@ mat-icon{
 }
 
 h3{
+    margin-bottom: 16px !important;
     @include nunito(700, 24px, black);
     @include respond-to-maxWidth('smallMedium'){
         margin-bottom: 20px;
@@ -55,7 +56,8 @@ h3{
     @include dFlex(end, center)
 }
 
-mat-form-field {
+::ng-deep mat-form-field {
+    margin-top: 16px !important;
     // @include padding(18px, 20px, 18px, 20px);
     border: 1px solid var(--border-light-purple);
     transition: border ease-in-out 0.3s;
