--- a/src/app/main-content/chat/chat.component.scss
+++ b/src/app/main-content/chat/chat.component.scss
@@ -43,12 +43,9 @@ app-chat-header {
 }
 
 app-chat-message-field {
-    @include heightWidth($h: 20%);
+    max-height: 240px;
+    @include heightWidth($h: 25%);
     border-radius: 0 0 20px 20px;
-
-    @media(max-height: 700px) {
-        @include heightWidth($h: 25%);
-    }
 }
 
 .direct-message-container {
@@ -124,3 +121,4 @@ app-chat-message-field {
     background-color: yellow;
     font-weight: bold;
   }
+
