--- a/src/app/shared/header/searchbar/searchbar.component.html
+++ b/src/app/shared/header/searchbar/searchbar.component.html
@@ -1,6 +1,7 @@
 <div class="searchbar" [ngClass]="addClass">
   <div class="inputFrame" [ngClass]="{'align-reverse' : !align_reverse}">
     <input 
+      #searchInput
       (focus)="onFocus()"
       tabindex="-1"
       [placeholder]="placeholder" 
@@ -10,10 +11,15 @@
       (keydown.arrowUp)="navigateDropdown(-1)" 
       (keydown.arrowDown)="navigateDropdown(1)" 
       (keydown.enter)="selectDropdownItem()" 
-      (focus)="showHints()" 
       (blur)="hideDropdown()"
     >
     <mat-icon>{{icon}}</mat-icon>
+  </div>
+
+  <div class="dropdown" *ngIf="nothingFound && !displayHints">
+    <div class="dropDownItem" (click)="emptyInput()">
+      <span class="basicSearchSpan"><mat-icon>frame_inspect</mat-icon> Nothing found   <mat-icon>sentiment_neutral</mat-icon></span>
+    </div>
   </div>
   
   <div class="dropdown" *ngIf="showDropdown || displayHints">
