--- a/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
+++ b/src/app/main-content/chat/chat-message-field/chat-message-field.component.scss
@@ -108,6 +108,17 @@ input[type="file"] {
     border-radius: 20px;
     overflow-y: scroll;
     scrollbar-width: none;
+
+    @media(max-width: 1285px) {
+    left: 40px;
+    }
+    @media(max-width: 900px) {
+    left: 70px;
+    }
+    @media(max-width: 600px) {
+    left: 20px;
+    width: calc(100% - 40px);
+    }
 }
 
 .user-list ul {
