--- a/src/app/shared/header/profile-navigation/profile-navigation.component.scss
+++ b/src/app/shared/header/profile-navigation/profile-navigation.component.scss
@@ -55,6 +55,8 @@
     img{
         @include image($br: 50%);
         height: 100%;
+        object-fit: cover !important;
+        width: 100%;
     }
     .statusSymbol{
         position: absolute;
